k8s/tbank-url-shortener/deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: t-bank-url-shortener-app
  name: t-bank-url-shortener-app
  namespace: t-bank-url-shortener
spec:
  replicas: 1
  selector:
    matchLabels:
      app: t-bank-url-shortener-app
  template:
    metadata:
      labels:
        app: t-bank-url-shortener-app
    spec:
      containers:
        - image: misterzurg/tbank_k8s:0.1.0
          name: library
          resources: {}
