k8s/tbank-url-shortener/svc.yml
---
apiVersion: v1
kind: Service
metadata:
  name: t-bank-url-shortener-svc
  namespace: t-bank-url-shortener
spec:
  type: ClusterIP
  selector:
    app: t-bank-url-shortener-app
  ports:
    - name: t-bank-url-shortener-app-port
      port: 1323
